--- a/src/components/css/Showcase.scss
+++ b/src/components/css/Showcase.scss
@@ -12,7 +12,7 @@
             position: absolute;
             bottom: 0px;
             right: 0;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(240, 240, 240, 0.5);
             width: 100%;
             padding: 10px;    
         }
@@ -22,21 +22,23 @@
                 margin: 0 0 10px;
                 text-align: center;
                 h2{
-                    color: rgb(247, 164, 164);
+                    color: rgb(255, 0, 0);
                     text-transform: capitalize;
                 }
             }
             .body{
                 text-align: center;
                 h3{
-                    font-weight: 500;
-                    color: #fff;
+                    font-weight: 900;
+                    color: rgb(0, 0, 0);
                 }
                 p{
                     margin: 10px 0;
-                    color: rgb(226, 226, 226);
+                    color: rgb(22, 22, 22);
+                    font-weight: 700;
                 }
                 button{
+                    margin: 10px 0 0;
                     color: rgb(255, 255, 255);
                     background-color: chocolate;
                     width: 50%;
