--- a/src/components/css/Trending.css
+++ b/src/components/css/Trending.css
@@ -1,1 +1,94 @@
-/* No CSS *//*# sourceMappingURL=Trending.css.map */
+.trending {
+  position: relative;
+}
+
+.trending .wrapper {
+  position: relative;
+  max-width: 100%;
+  height: 560px;
+  margin: 0 auto;
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+}
+
+.trending .title {
+  padding: 10px;
+  margin: 20px 0;
+  color: #292621;
+}
+
+.trending .arrows {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 10px;
+}
+
+.trending .arrows .arrow1, .trending .arrows .arrow2 {
+  background-color: rgba(46, 46, 46, 0.8);
+  padding: 10px 15px;
+}
+
+.trending .arrows .arrow1 {
+  margin-left: 100px;
+}
+
+.trending .arrows .arrow2 {
+  margin-right: 140px;
+}
+
+.trending .arrows .icon {
+  font-size: 30px;
+  color: #fff;
+}
+
+.trending .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.trending .container .item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1;
+          flex: 1 1;
+  min-width: 360px;
+  margin: 0 0 0 10px;
+  opacity: 1;
+}
+
+.trending .container .item .img {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.trending .container .item .img img {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.trending .container .item .body {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.trending .container .item .body p {
+  font-size: 18px;
+}
+/*# sourceMappingURL=Trending.css.map */
