--- a/src/components/css/Trending.scss
+++ b/src/components/css/Trending.scss
@@ -1,3 +1,71 @@
 .trending{
-    
+    position: relative;
+    .wrapper{
+        position: relative;
+        max-width: 100%;
+        height: 560px;
+        margin: 0 auto;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+    }
+    .title{
+        padding: 10px;
+        margin: 20px 0;
+        color: #292621;
+    }
+    .arrows{
+        z-index: 1;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        padding: 0 10px;
+        .arrow1, .arrow2{
+            background-color: rgba(46, 46, 46, 0.8);
+            padding: 10px 15px;
+        }
+        .arrow1{
+            margin-left: 100px;
+        }
+        .arrow2{
+            margin-right: 140px;
+        }
+       
+        .icon{
+            font-size: 30px;
+            color: #fff;
+        }
+    }
+    .container{
+        display: flex;
+        position: absolute;
+        justify-content: flex-start;
+        align-items: center;
+        top: 0;
+        left: 0;
+        width: 100%;
+        .item{
+            flex: 1 1;
+            min-width: 360px;
+            margin: 0 0 0 10px;
+            opacity: 1;
+            .img{
+                width: 90%;
+                margin: 0 auto;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    margin: 0 auto;
+                }
+
+            }
+            .body{
+                margin-top: 20px;
+                text-align: center;
+                p{
+                    font-size: 18px;
+                }
+            }
+        }
+    }
 }
