--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap");
+.nav {
+  z-index: 300;
+}
+
 .nav .container .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -45,6 +49,12 @@
   font-size: 32px;
   font-weight: 400;
   color: #1c2122;
+}
+
+@media screen and (max-width: 360px) {
+  .nav .container .wrapper .cart__div .icon {
+    font-size: 26px;
+  }
 }
 
 .nav .container .menu {
