--- a/src/components/css/Nav.scss
+++ b/src/components/css/Nav.scss
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap');.nav{
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap');
+
+.nav{
+    z-index: 300;
     .container{
         .wrapper{
             display: flex;   
@@ -28,6 +31,9 @@
                     font-size: 32px;
                     font-weight: 400;
                     color: rgb(28, 33, 34);
+                    @media screen and (max-width:360px){
+                        font-size: 26px;
+                    }
                 }
             }
         }
