--- a/src/components/css/Trending.scss
+++ b/src/components/css/Trending.scss
@@ -3,8 +3,9 @@
     .wrapper{
         position: relative;
         max-width: 100%;
-        height: 560px;
+        height: 520px;
         margin: 0 auto;
+        scroll-snap-type: x mandatory;
         overflow-x: scroll;
         scroll-behavior: smooth;
     }
@@ -45,6 +46,7 @@
         left: 0;
         width: 100%;
         .item{
+            scroll-snap-align: center;
             flex: 1 1;
             min-width: 360px;
             margin: 0 0 0 10px;
@@ -65,6 +67,36 @@
                 p{
                     font-size: 18px;
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:360px){
+    .trending{
+        .wrapper{
+            height: 420px;
+        }
+        .arrows{
+            top: 50%;
+            .arrow1, .arrow2{
+                font-size: 14px;
+                padding: 10px;
+            }
+            .arrow1{
+                margin-left: 100px;
+            }
+            .arrow2{
+                margin-right: 120px;
+            }
+            .icon{
+                font-size: 20px;
+            }
+        }
+        .container{
+            .item{
+                min-width: 310px;
+                margin: 0;
             }
         }
     }
