--- a/src/components/css/Testimonials.scss
+++ b/src/components/css/Testimonials.scss
@@ -3,7 +3,7 @@
     .title {
         h2{
             text-align: center;
-            color: rgb(2, 71, 83);
+            color: #292621;
         }
         .icon__div{
             text-align: center;
