--- a/src/components/css/Trending.css
+++ b/src/components/css/Trending.css
@@ -4,7 +4,7 @@
 
 .trending .wrapper {
   position: relative;
-  max-width: 100%;
+  max-width: 950px;
   height: 520px;
   margin: 0 auto;
   -ms-scroll-snap-type: x mandatory;
@@ -17,6 +17,7 @@
   padding: 10px;
   margin: 20px 0;
   color: #292621;
+  text-align: center;
 }
 
 .trending .arrows {
