--- a/src/components/css/Trending.scss
+++ b/src/components/css/Trending.scss
@@ -2,7 +2,7 @@
     position: relative;
     .wrapper{
         position: relative;
-        max-width: 100%;
+        max-width: 950px;
         height: 520px;
         margin: 0 auto;
         scroll-snap-type: x mandatory;
@@ -13,6 +13,7 @@
         padding: 10px;
         margin: 20px 0;
         color: #292621;
+        text-align: center;
     }
     .arrows{
         z-index: 1;
