--- a/src/components/css/Trending.scss
+++ b/src/components/css/Trending.scss
@@ -2,7 +2,7 @@
     position: relative;
     .wrapper{
         position: relative;
-        max-width: 950px;
+        max-width: 100%;
         height: 520px;
         margin: 0 auto;
         scroll-snap-type: x mandatory;
