--- a/src/components/css/Process.scss
+++ b/src/components/css/Process.scss
@@ -1,7 +1,7 @@
 .process{
-    margin-top: 70px;
+    margin: 70px 0 40px;
     background-color: rgb(248, 248, 248);
-    box-shadow: 0px 1px 4px grey;
+    box-shadow: 0px 0px 2px grey;
 
     .container{
         display: flex;
