--- a/src/components/css/Nav.scss
+++ b/src/components/css/Nav.scss
@@ -10,9 +10,17 @@
             padding:10px 15px;
             .logo{
                 display: flex;
+                align-items: center;
                 h3{
                     margin: 0 0 0 7px;
                     padding: 0;
+                }
+                svg{
+                    font-size: 42px;
+                    color: #000;
+                    background-color: #d2331e;
+                    border-radius: 50%;
+                    padding: 5px;
                 }
             }
             .menu__icon{
