--- a/src/components/css/NewsLetter.css
+++ b/src/components/css/NewsLetter.css
@@ -54,6 +54,10 @@
   border-radius: 0px;
 }
 
+.newsletter .container .socials {
+  margin: 30px 0;
+}
+
 .newsletter .container .socials .icon {
   color: #718191;
   font-size: 32px;
