--- a/src/components/css/NewsLetter.scss
+++ b/src/components/css/NewsLetter.scss
@@ -40,6 +40,7 @@
             }
         }
         .socials{
+            margin: 30px 0 ;
             .icon{
                 color: #718191;
                 font-size: 32px;
