used React Indiana Drag Scroll to drag and scroll slides

--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -28,7 +28,7 @@
 .footer .container .logo svg {
   font-size: 52px;
   color: #000;
-  background-color: #d2331e;
+  background-color: #ff4343;
   border-radius: 50%;
   padding: 10px;
 }
