--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -19,7 +19,7 @@
             svg{
                 font-size: 52px;
                 color: #000;
-                background-color: #d2331e;
+                background-color: #ff4343;
                 border-radius: 50%;
                 padding: 10px;
             }
