--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -33,7 +33,7 @@
 .nav .container .wrapper .logo svg {
   font-size: 42px;
   color: #000;
-  background-color: #d2331e;
+  background-color: #ff4343;
   border-radius: 50%;
   padding: 5px;
 }
