--- a/src/components/css/Nav.scss
+++ b/src/components/css/Nav.scss
@@ -18,7 +18,7 @@
                 svg{
                     font-size: 42px;
                     color: #000;
-                    background-color: #d2331e;
+                    background-color: #ff4343;
                     border-radius: 50%;
                     padding: 5px;
                 }
