--- a/src/components/css/Trending.css
+++ b/src/components/css/Trending.css
@@ -7,8 +7,6 @@
   max-width: 100%;
   height: 520px;
   margin: 0 auto;
-  -ms-scroll-snap-type: x mandatory;
-      scroll-snap-type: x mandatory;
   overflow-x: scroll;
   scroll-behavior: smooth;
 }
@@ -20,33 +18,30 @@
   text-align: center;
 }
 
-.trending .arrows {
+.trending .arrow1 {
   z-index: 1;
   position: absolute;
   top: 50%;
+  right: 10px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0 10px;
 }
 
-.trending .arrows .arrow1, .trending .arrows .arrow2 {
-  background-color: rgba(46, 46, 46, 0.8);
+.trending .arrow2 {
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.trending .arrow1, .trending .arrow2 {
+  background-color: rgba(46, 46, 46, 0.6);
   padding: 10px 15px;
 }
 
-.trending .arrows .arrow1 {
-  margin-left: 100px;
-}
-
-.trending .arrows .arrow2 {
-  margin-right: 140px;
-}
-
-.trending .arrows .icon {
-  font-size: 30px;
+.trending .arrow1 .icon, .trending .arrow2 .icon {
   color: #fff;
 }
 
@@ -98,26 +93,10 @@
 
 @media screen and (max-width: 360px) {
   .trending .wrapper {
-    height: 420px;
-  }
-  .trending .arrows {
-    top: 50%;
-  }
-  .trending .arrows .arrow1, .trending .arrows .arrow2 {
-    font-size: 14px;
-    padding: 10px;
-  }
-  .trending .arrows .arrow1 {
-    margin-left: 100px;
-  }
-  .trending .arrows .arrow2 {
-    margin-right: 120px;
-  }
-  .trending .arrows .icon {
-    font-size: 20px;
+    height: 260px;
   }
   .trending .container .item {
-    min-width: 310px;
+    min-width: 160px;
     margin: 0;
   }
 }
