--- a/src/components/css/Trending.scss
+++ b/src/components/css/Trending.scss
@@ -5,9 +5,9 @@
         max-width: 100%;
         height: 520px;
         margin: 0 auto;
-        scroll-snap-type: x mandatory;
         overflow-x: scroll;
         scroll-behavior: smooth;
+        
     }
     .title{
         padding: 10px;
@@ -15,26 +15,26 @@
         color: #292621;
         text-align: center;
     }
-    .arrows{
+    .arrow1{
         z-index: 1;
         position: absolute;
         top: 50%;
+        right: 10px;
         transform: translateY(-50%);
-        display: flex;
-        padding: 0 10px;
-        .arrow1, .arrow2{
-            background-color: rgba(46, 46, 46, 0.8);
-            padding: 10px 15px;
-        }
-        .arrow1{
-            margin-left: 100px;
-        }
-        .arrow2{
-            margin-right: 140px;
-        }
-       
+
+    }
+    .arrow2{
+        z-index: 1;
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+
+    }
+    .arrow1, .arrow2{
+        background-color: rgba(46, 46, 46, 0.6);
+        padding: 10px 15px;
         .icon{
-            font-size: 30px;
             color: #fff;
         }
     }
@@ -76,27 +76,11 @@
 @media screen and (max-width:360px){
     .trending{
         .wrapper{
-            height: 420px;
-        }
-        .arrows{
-            top: 50%;
-            .arrow1, .arrow2{
-                font-size: 14px;
-                padding: 10px;
-            }
-            .arrow1{
-                margin-left: 100px;
-            }
-            .arrow2{
-                margin-right: 120px;
-            }
-            .icon{
-                font-size: 20px;
-            }
+            height: 260px;
         }
         .container{
             .item{
-                min-width: 310px;
+                min-width: 160px;
                 margin: 0;
             }
         }
