--- a/src/components/css/Nav.scss
+++ b/src/components/css/Nav.scss
@@ -71,7 +71,7 @@
             }
         }
         .flash__sale{
-            background-color: rgb(2, 14, 22);
+            background-color: #171613;
             width: 100%;
             padding:15px 7px;
             p{
@@ -85,6 +85,7 @@
             a{
                 color: chocolate;
                 cursor: pointer;
+                text-transform: uppercase;
             }
         }
     }
