--- a/src/components/css/Process.scss
+++ b/src/components/css/Process.scss
@@ -1,5 +1,5 @@
 .process{
-    margin: 70px 0 0px;
+    margin: 40px 0 0px;
     background-color: rgb(248, 248, 248);
     box-shadow: 0px 0px 2px grey;
 
@@ -10,6 +10,7 @@
         align-items: center;
         padding: 10px 0;
         .content{
+            margin-top: 30px;
             text-align: center;
             margin-bottom: 60px;
             .icon{
