--- a/src/components/css/MainProducts.css
+++ b/src/components/css/MainProducts.css
@@ -1,10 +1,12 @@
 .main__products {
   margin-top: 70px;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .main__products img {
   width: 100%;
-  min-height: 300px;
+  min-height: 270px;
 }
 
 .main__products .product {
@@ -15,16 +17,16 @@
 
 .main__products a {
   position: absolute;
-  top: 90%;
+  bottom: 0px;
   left: 50%;
   -webkit-transform: translate(-50%, -90%);
           transform: translate(-50%, -90%);
-  font-size: 32px;
+  font-size: 26px;
   font-weight: 900;
   color: #fff;
   z-index: 1;
   background-color: #1d1d1d;
-  padding: 10px 20px;
+  padding: 10px 15px;
   cursor: pointer;
   text-decoration: none;
 }
