--- a/src/components/css/MainProducts.scss
+++ b/src/components/css/MainProducts.scss
@@ -1,8 +1,11 @@
 .main__products{
     margin-top: 70px;
+    width: 90%;
+    margin: 0 auto;
+
     img{
         width: 100%;
-        min-height: 300px;
+        min-height: 270px;
     }
     .product{
         position: relative;
@@ -11,15 +14,15 @@
     }
     a{
         position: absolute;
-        top: 90%;
+        bottom: 0px;
         left: 50%;
         transform: translate(-50%, -90%);
-        font-size: 32px;
+        font-size: 26px;
         font-weight: 900;
         color: #fff;
         z-index: 1;
-        background-color: rgb(29, 29, 29);
-        padding: 10px 20px;
+        background-color: rgba(29, 29, 29, 1);
+        padding: 10px 15px;
         cursor: pointer;
         text-decoration: none;
     }
