--- a/src/components/css/Process.css
+++ b/src/components/css/Process.css
@@ -1,5 +1,5 @@
 .process {
-  margin: 70px 0 0px;
+  margin: 40px 0 0px;
   background-color: #f8f8f8;
   -webkit-box-shadow: 0px 0px 2px grey;
           box-shadow: 0px 0px 2px grey;
@@ -23,6 +23,7 @@
 }
 
 .process .container .content {
+  margin-top: 30px;
   text-align: center;
   margin-bottom: 60px;
 }
