--- a/src/components/css/LandingProductItems.scss
+++ b/src/components/css/LandingProductItems.scss
@@ -23,3 +23,12 @@
         }
     }
 }
+
+
+@media screen and (max-width:360px){
+
+    .item{
+        min-width: 160px;
+        margin: 0;
+    }
+}
