--- a/src/components/css/MainProducts.scss
+++ b/src/components/css/MainProducts.scss
@@ -13,6 +13,7 @@
         margin: 20px 0;
     }
     a{
+        cursor: pointer;
         position: absolute;
         bottom: 0px;
         left: 50%;
