--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -25,6 +25,12 @@
           align-items: center;
 }
 
+.nav .container .wrapper .logo a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
 .nav .container .wrapper .logo h3 {
   margin: 0 0 0 7px;
   padding: 0;
