--- a/src/components/css/Products.css
+++ b/src/components/css/Products.css
@@ -25,17 +25,15 @@
 }
 
 .products .container .item .img .purchase__icon {
-  -webkit-box-shadow: 0px 2px 2px grey;
-          box-shadow: 0px 2px 2px grey;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0px 2px 2px grey;
+          box-shadow: 0px 2px 2px grey;
   background-color: #fff;
   position: absolute;
   bottom: 20px;
@@ -44,12 +42,19 @@
           transform: translate(-50%);
   width: 50%;
   margin: 0 auto;
-  padding: 10px 20px;
+  padding: 10px 15px;
 }
 
 .products .container .item .img .purchase__icon svg {
+  font-size: 26px;
   color: #171613;
   cursor: pointer;
+}
+
+.products .container .item .img:hover .purchase__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .products .container .item .body {
@@ -58,9 +63,12 @@
 }
 
 .products .container .item .body p {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 5px auto 0;
   cursor: pointer;
   font-size: 18px;
-  margin-top: 5px;
 }
 
 @media screen and (max-width: 360px) {
