--- a/src/components/css/Products.scss
+++ b/src/components/css/Products.scss
@@ -17,10 +17,10 @@
                 }
         
                 .purchase__icon{
-                    box-shadow: 0px 2px 2px grey;
-                    display: flex;
+                    display: none;
                     justify-content: space-between;
                     align-items: center;
+                    box-shadow: 0px 2px 2px grey;
                     background-color: #fff;
                     position: absolute;
                     bottom: 20px;
@@ -28,10 +28,16 @@
                     transform: translate(-50%);
                     width: 50%;
                     margin: 0 auto;
-                    padding:10px 20px;
+                    padding:10px 15px;
                     svg{
+                        font-size: 26px;
                         color:#171613;
                         cursor: pointer;
+                    }
+                }
+                &:hover{
+                    .purchase__icon{
+                        display: flex;
                     }
                 }
             }
@@ -39,9 +45,10 @@
                 margin-top: 20px;
                 text-align: center;
                 p{
+                    max-width: fit-content;
+                    margin: 5px auto 0;
                     cursor: pointer;
                     font-size: 18px;
-                    margin-top: 5px;
                 }
             }
         }
