--- a/src/components/css/SortFilter.css
+++ b/src/components/css/SortFilter.css
@@ -23,7 +23,12 @@
   border: 0.5px solid #1d1d1d;
 }
 
+.sort__filter .show__filter__container {
+  display: block !important;
+}
+
 .sort__filter .container {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -49,6 +54,7 @@
 
 .sort__filter .container .sub__title svg {
   cursor: pointer;
+  font-size: 32px;
 }
 
 .sort__filter .container .wrapper {
@@ -75,6 +81,7 @@
   background-color: #f0f0f0;
   -webkit-box-shadow: 0px 2px 2px silver;
           box-shadow: 0px 2px 2px silver;
+  outline: none;
 }
 
 .sort__filter .container .filter .filter__options .title {
@@ -90,13 +97,30 @@
   width: 100%;
   background-color: #f0f0f0;
   padding: 10px;
-  margin: 10px 0;
+  margin: 15px 0 0;
   color: #292621;
   text-transform: capitalize;
   text-align: center;
 }
 
+.sort__filter .container .filter .filter__options .title .remove__icon {
+  display: none;
+}
+
+.sort__filter .container .filter .filter__options .title .show__remove__icon {
+  display: block !important;
+}
+
+.sort__filter .container .filter .filter__options .title .show__add__icon {
+  display: none !important;
+}
+
+.sort__filter .container .filter .filter__options .show__body {
+  display: block !important;
+}
+
 .sort__filter .container .filter .filter__options .body {
+  display: none;
   padding: 10px;
 }
 
@@ -128,16 +152,14 @@
 }
 
 .sort__filter .container .done__btn {
-  position: fixed;
-  bottom: 0;
-  right: 0;
+  margin-top: 50px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -151,11 +173,14 @@
 }
 
 .sort__filter .container .done__btn .done {
-  background-color: lightsalmon;
+  background-color: #111324;
+  -webkit-box-shadow: 0px 0px 1px #1d1414;
+          box-shadow: 0px 0px 1px #1d1414;
+  color: #fff;
 }
 
 .sort__filter .container .done__btn .clear__all {
-  -webkit-box-shadow: 0px 2px 3px #181717;
-          box-shadow: 0px 2px 3px #181717;
+  -webkit-box-shadow: 0px 0px 1px #181717;
+          box-shadow: 0px 0px 1px #181717;
 }
 /*# sourceMappingURL=SortFilter.css.map */
