--- a/src/components/css/SortFilter.scss
+++ b/src/components/css/SortFilter.scss
@@ -15,7 +15,11 @@
         border: 0.5px solid rgb(29, 29, 29);
     }
     // sort and filter section
+    .show__filter__container{
+        display: block !important;
+    }
     .container{
+        display: none;
         position: fixed;
         top: 0;
         left: 0;
@@ -31,6 +35,7 @@
             padding: 10px;
             svg{
                 cursor: pointer;
+                font-size: 32px;
             }
         }
         .wrapper{
@@ -44,12 +49,13 @@
         .sort{
             margin: 15px 0 30px;
             .select{
-                width: 100%;
+                width:100%;
                 padding: 10px;
                 font-size: 16px;
                 text-transform: capitalize;
                 background-color: rgb(240, 240, 240);
                 box-shadow: 0px 2px 2px rgb(192, 192, 192);
+                outline: none
             }
         }
         .filter{
@@ -61,12 +67,28 @@
                     width: 100%;
                     background-color: rgb(240, 240, 240);
                     padding: 10px;
-                    margin: 10px 0;
+                    margin: 15px 0 0;
                     color: #292621;
                     text-transform: capitalize;
                     text-align: center;
+                    .remove__icon{
+                        display: none;
+                    }
+                    .add__icon{
+                        // display: none;
+                    }
+                    .show__remove__icon{
+                        display: block !important;
+                    }
+                    .show__add__icon{
+                        display: none !important;
+                    }
+                }
+                .show__body{
+                    display: block !important;
                 }
                 .body{
+                    display: none;
                     padding: 10px;
                     p{
                         margin-top: 10px;
@@ -91,12 +113,10 @@
             }
         }
         .done__btn{
-            position: fixed;
-            bottom: 0;
-            right: 0;
+            margin-top: 50px;
             width: 100%;
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
             button{
                 width: 100%;
@@ -105,10 +125,12 @@
                 cursor: pointer;
             }
             .done{
-                background-color: lightsalmon;
+                background-color: rgb(17, 19, 36);
+                box-shadow: 0px 0px 1px rgb(29, 20, 20);
+                color: #fff;
             }
             .clear__all{
-                box-shadow: 0px 2px 3px rgb(24, 23, 23);
+                box-shadow: 0px 0px 1px rgb(24, 23, 23);
             }
 
         }
