--- a/src/components/css/SortFilter.css
+++ b/src/components/css/SortFilter.css
@@ -173,7 +173,7 @@
 }
 
 .sort__filter .container .done__btn .done {
-  background-color: #111324;
+  background-color: #e60953;
   -webkit-box-shadow: 0px 0px 1px #1d1414;
           box-shadow: 0px 0px 1px #1d1414;
   color: #fff;
