--- a/src/components/css/Products.css
+++ b/src/components/css/Products.css
@@ -42,6 +42,9 @@
 }
 
 .products__section .container .item .img .purchase__icon {
+  position: absolute;
+  bottom: 20px;
+  right: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -51,18 +54,25 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 0 auto;
+  padding: 5px;
+  border-radius: 50%;
   -webkit-box-shadow: 0px 2px 2px grey;
           box-shadow: 0px 2px 2px grey;
-  background-color: #fff;
-  width: 100%;
-  margin: 0 auto;
-  padding: 10px 15px;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .products__section .container .item .img .purchase__icon svg {
   font-size: 26px;
   color: #171613;
   cursor: pointer;
+}
+
+.products__section .container .item .img .purchase__icon svg:hover {
+  color: red;
 }
 
 .products__section .container .item .body {
