--- a/src/components/css/SortFilter.scss
+++ b/src/components/css/SortFilter.scss
@@ -38,6 +38,33 @@
                 font-size: 32px;
             }
         }
+        .chosen__options{
+            margin:10px 0;
+            padding:0 10px;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
+            width: 100%;            
+            overflow: hidden;
+            .body__content{
+                margin:10px 10px 0px 0px;
+                border: 1px solid grey;
+                text-align: center;
+                padding:5px 10px;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                svg{
+                    font-size: 18px;
+                }
+                p{
+                    margin-right: 7px;
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    letter-spacing: 1px;
+                }
+            }
+        }
         .wrapper{
             padding: 10px;
             height: 590px;
@@ -91,9 +118,20 @@
                     display: none;
                     padding: 10px;
                     p{
-                        margin-top: 10px;
                         text-transform: capitalize;
                         cursor: pointer;
+                        max-width: fit-content;
+                        margin-right: 5px;
+                    }
+                    span{
+                        color: rgb(48, 48, 48);
+                        font-size: 14px;
+                    }
+                    .body__content{
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        margin-top: 10px;
                     }
                     .input{
                         margin-top: 15px;
@@ -103,6 +141,10 @@
                             margin-left: 15px;
                             font-size: 16px;
                             text-transform: capitalize;
+                        }
+                        span{
+                            color: rgb(48, 48, 48);
+                            font-size: 14px;
                         }
                         input{
                             width: 25px;
