--- a/src/components/css/Nav.css
+++ b/src/components/css/Nav.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap");
-.nav {
-  z-index: 300;
+.nav .container {
+  position: relative;
+}
+
+.nav .container .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #0f0f0f;
+  opacity: 0.5;
+  z-index: 3;
 }
 
 .nav .container .wrapper {
@@ -14,6 +25,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 10px 15px;
+  z-index: 4;
 }
 
 .nav .container .wrapper .logo {
@@ -74,26 +86,39 @@
   }
 }
 
-.nav .container .menu {
-  position: relative;
-}
-
-.nav .container .menu .show__menu {
+.nav .container .show__menu {
   display: block !important;
 }
 
-.nav .container .menu .menu__list {
+.nav .container .menu {
   display: none;
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0;
-  width: 100%;
+  width: 65%;
   background-color: #fff;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  height: 85vh;
   -webkit-box-shadow: 0px 1px 3px lightgrey;
           box-shadow: 0px 1px 3px lightgrey;
+  z-index: 300;
+}
+
+.nav .container .menu .icon__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 10px 0;
+}
+
+.nav .container .menu .icon__div svg {
+  font-size: 32px;
+  cursor: pointer;
 }
 
 .nav .container .menu .menu__list ul {
