--- a/src/components/css/Nav.scss
+++ b/src/components/css/Nav.scss
@@ -1,13 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:wght@100;400&display=swap');
 
 .nav{
-    z-index: 300;
     .container{
+        position: relative;
+        .overlay{
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background-color: rgb(15, 15, 15);
+            opacity: 0.5;
+            z-index: 3;
+        }
         .wrapper{
             display: flex;   
             justify-content: space-between;
             align-items: center;
             padding:10px 15px;
+            z-index: 4;
             .logo{
                 display: flex;
                 align-items: center;
@@ -50,20 +61,31 @@
                 }
             }
         }
+        .show__menu{
+            display: block !important;
+        }
         .menu{
-            position: relative;
-            .show__menu{
-                display: block !important;
+            display: none;
+            position: fixed;
+            top: 0px;
+            left: 0;
+            width: 65%;
+            background-color:#fff;
+            height: 85vh;
+            box-shadow: 0px 1px 3px lightgrey;
+            z-index: 300;
+            .icon__div{
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                padding: 10px 10px 0;
+                svg{
+                    font-size: 32px;
+                    cursor: pointer;
+                }
+
             }
             .menu__list{
-                display: none;
-                position: absolute;
-                top: 0px;
-                left: 0;
-                width: 100%;
-                background-color:#fff;
-                max-height: fit-content;
-                box-shadow: 0px 1px 3px lightgrey;
                 ul{
                     padding:0;
                     li{
