--- a/src/components/css/SortFilter.scss
+++ b/src/components/css/SortFilter.scss
@@ -21,12 +21,13 @@
     .container{
         display: none;
         position: fixed;
-        top: 0;
-        left: 0;
+        top: 0; 
+        left:0;
         width: 100%;
         height: 100vh;
         background-color: #FFF;
-        z-index: 2;
+        z-index: 300;
+        overflow-y: hidden;
         .sub__title{
             display: flex;
             justify-content: space-between;
@@ -40,7 +41,6 @@
         }
         .chosen__options{
             margin:10px 0;
-            padding:0 10px;
             display: flex;
             align-items: center;
             flex-wrap: wrap;
@@ -98,6 +98,9 @@
                     color: #292621;
                     text-transform: capitalize;
                     text-align: center;
+                    h3{
+                        font-size: 16px;
+                    }
                     .remove__icon{
                         display: none;
                     }
