--- a/src/components/css/Products.scss
+++ b/src/components/css/Products.scss
@@ -5,10 +5,15 @@
     .container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        @media screen and(max-width:360px){
+            grid-template-columns: repeat(1, 1fr);
+        }
         grid-template-rows: auto;
         grid-gap: 20px;
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
+        overflow-x: hidden;
+        padding: 10px;
         .item{
             box-shadow: 0px 1px 3px rgb(184, 183, 183);
             a{
