--- a/client/src/components/css/Products.css
+++ b/client/src/components/css/Products.css
@@ -32,6 +32,7 @@
 .products__section .container .item a {
   text-decoration: none;
   color: inherit;
+  text-transform: capitalize;
 }
 
 .products__section .container .item .img {
