--- a/client/src/components/css/Products.scss
+++ b/client/src/components/css/Products.scss
@@ -19,6 +19,7 @@
             a{
                 text-decoration: none;
                 color: inherit;
+                text-transform: capitalize;
             }
             .img{
                 position: relative;
