--- a/client/src/components/css/checkoutItems.css
+++ b/client/src/components/css/checkoutItems.css
@@ -1,8 +1,8 @@
-.checkout__items {
+.checkout__items, .payment__items {
   margin: 30px 0;
 }
 
-.checkout__items .item {
+.checkout__items .item, .payment__items .item {
   width: 90%;
   margin: 0 auto;
   display: -webkit-box;
@@ -14,7 +14,7 @@
   min-height: 175px;
 }
 
-.checkout__items .item .img {
+.checkout__items .item .img, .payment__items .item .img {
   background-color: whitesmoke;
   border: 1px solid grey;
   -webkit-box-flex: 0.40;
@@ -22,51 +22,51 @@
           flex: 0.40;
 }
 
-.checkout__items .item .img .img__container {
+.checkout__items .item .img .img__container, .payment__items .item .img .img__container {
   padding: 10px;
   width: 160px;
   margin: auto;
   height: 100%;
 }
 
-.checkout__items .item .img .img__container img {
+.checkout__items .item .img .img__container img, .payment__items .item .img .img__container img {
   width: 100%;
   max-width: 100%;
   height: 100%;
 }
 
-.checkout__items .item .body {
+.checkout__items .item .body, .payment__items .item .body {
   -webkit-box-flex: 0.60;
       -ms-flex: 0.60;
           flex: 0.60;
   margin-left: 20px;
 }
 
-.checkout__items .item .body a {
+.checkout__items .item .body a, .payment__items .item .body a {
   color: #000;
   text-decoration: none;
   font-size: 16px;
 }
 
-.checkout__items .item .body .body__title h2 {
+.checkout__items .item .body .body__title h2, .payment__items .item .body .body__title h2 {
   font-weight: normal;
   padding: 0;
   margin: 0;
 }
 
-.checkout__items .item .body table {
+.checkout__items .item .body table, .payment__items .item .body table {
   margin-bottom: 1rem;
   border-collapse: separate;
   border-spacing: 0 15px;
 }
 
-.checkout__items .item .body table tr {
+.checkout__items .item .body table tr, .payment__items .item .body table tr {
   text-align: left;
   font-family: Georgia, 'Times New Roman', Times, serif;
   padding: 10px 0;
 }
 
-.checkout__items .item .body table tr th {
+.checkout__items .item .body table tr th, .payment__items .item .body table tr th {
   padding: 0px 5px 0 0px;
   font-weight: bold;
   text-transform: capitalize;
@@ -74,12 +74,12 @@
   font-style: italic;
 }
 
-.checkout__items .item .body table tr td {
+.checkout__items .item .body table tr td, .payment__items .item .body table tr td {
   font-style: italic;
   text-transform: uppercase;
 }
 
-.checkout__items .item .body .edit__div {
+.checkout__items .item .body .edit__div, .payment__items .item .body .edit__div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,7 +88,7 @@
           align-items: center;
 }
 
-.checkout__items .item .body .edit__div p {
+.checkout__items .item .body .edit__div p, .payment__items .item .body .edit__div p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -103,37 +103,37 @@
   cursor: pointer;
 }
 
-.checkout__items .item .body .edit__div p span {
+.checkout__items .item .body .edit__div p span, .payment__items .item .body .edit__div p span {
   padding-left: 3px;
 }
 
-.checkout__items .item .body .edit__div p svg {
+.checkout__items .item .body .edit__div p svg, .payment__items .item .body .edit__div p svg {
   font-size: 16px;
 }
 
-.checkout__items .item .body .edit__div .remove__item {
+.checkout__items .item .body .edit__div .remove__item, .payment__items .item .body .edit__div .remove__item {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
 }
 
-.checkout__items .display__form {
+.checkout__items .display__form, .payment__items .display__form {
   display: block !important;
 }
 
-.checkout__items .edit__form {
+.checkout__items .edit__form, .payment__items .edit__form {
   margin-top: 15px;
   width: 90%;
   margin: 15px auto;
   display: none;
 }
 
-.checkout__items .edit__form form {
+.checkout__items .edit__form form, .payment__items .edit__form form {
   border: 1px solid lightgray;
   padding: 15px 10px;
 }
 
-.checkout__items .edit__form form .form__group {
+.checkout__items .edit__form form .form__group, .payment__items .edit__form form .form__group {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -148,7 +148,7 @@
   margin: 0 10px;
 }
 
-.checkout__items .edit__form form .form__group .size__options, .checkout__items .edit__form form .form__group input {
+.checkout__items .edit__form form .form__group .size__options, .checkout__items .edit__form form .form__group input, .payment__items .edit__form form .form__group .size__options, .payment__items .edit__form form .form__group input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,12 +158,12 @@
           flex-direction: column;
 }
 
-.checkout__items .edit__form form .form__group label {
+.checkout__items .edit__form form .form__group label, .payment__items .edit__form form .form__group label {
   text-transform: uppercase;
   font-size: 14px;
 }
 
-.checkout__items .edit__form form .form__group input, .checkout__items .edit__form form .form__group select {
+.checkout__items .edit__form form .form__group input, .checkout__items .edit__form form .form__group select, .payment__items .edit__form form .form__group input, .payment__items .edit__form form .form__group select {
   padding: 10px;
   width: 120px;
   margin: 0 20px 0 0;
@@ -172,7 +172,7 @@
   outline: none;
 }
 
-.checkout__items .edit__form form .btn {
+.checkout__items .edit__form form .btn, .payment__items .edit__form form .btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,21 +190,21 @@
   width: 100%;
 }
 
-.checkout__items .edit__form form .btn button {
+.checkout__items .edit__form form .btn button, .payment__items .edit__form form .btn button {
   width: 100%;
   margin-top: 10px;
 }
 
-.checkout__items .edit__form form .btn button svg {
+.checkout__items .edit__form form .btn button svg, .payment__items .edit__form form .btn button svg {
   margin-right: 10px;
 }
 
-.checkout__items .edit__form form .btn .save__btn {
+.checkout__items .edit__form form .btn .save__btn, .payment__items .edit__form form .btn .save__btn {
   background-color: #025da8;
   color: #fff;
 }
 
-.checkout__items .edit__form form .btn .cancel__btn {
+.checkout__items .edit__form form .btn .cancel__btn, .payment__items .edit__form form .btn .cancel__btn {
   border: 1px solid #025da8;
 }
 /*# sourceMappingURL=checkoutItems.css.map */
